--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,43 @@
-/* место для вашего кода */
+.header {
+    font-family: Raleway;
+    width: 1340px;
+    height: 109px;
+    display: inline;
+    margin-right: 51px;
+
+}
+
+.header__menu {
+
+}
+
+.header__links-list {
+
+}
+
+.header__links-list-item {
+
+}
+
+.header__link_active {
+
+}
+
+.header__logo {
+    
+
+}
+
+.header__logo-image {
+    width: 148px;
+    height: 105px;
+   padding: 63px 46px;   
+}
+
+.address {
+
+}
+
+.header__address {
+
+}
