--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,34 @@
 .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     font-family: Raleway;
-    width: 1340px;
-    height: 109px;
-    display: inline;
-    margin-right: 51px;
-
+    margin-top: 95px;
+    
 }
 
 .header__menu {
-
+   
+  
 }
 
 .header__links-list {
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 17px;
+    margin-top: 43px;
+    margin-bottom: 45px;
+    
 }
 
 .header__links-list-item {
+    color: #000;
+    font-size: 18px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 
 }
 
@@ -31,13 +44,22 @@
 .header__logo-image {
     width: 148px;
     height: 105px;
-   padding: 63px 46px;   
+
+    
 }
 
 .address {
-
+    display: flex;
+    width: 240px;
+    height: 24px;
+    flex-direction: column;
 }
 
 .header__address {
-
+    color: #000;
+    font-size: 18px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    
 }
