--- a/styles/style.css
+++ b/styles/style.css
@@ -3,63 +3,63 @@
     flex-direction: row;
     justify-content: space-around;
     font-family: Raleway;
-    margin-top: 95px;
-    
+    margin-top: 92px;
+    margin-bottom: 92px;
+    margin-left: 51px;
+    margin-right: 49px;  
 }
 
 .header__menu {
-   
-  
+    line-height: 21px;
+    color: #000;
+    font-size: 18px;
 }
 
 .header__links-list {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    gap: 17px;
+    gap: 32px;
     margin-top: 43px;
-    margin-bottom: 45px;
-    
+    margin-bottom: 45px; 
 }
 
 .header__links-list-item {
-    color: #000;
-    font-size: 18px;
     font-family: Raleway;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-
 }
 
 .header__link_active {
-
+    list-style: none;
 }
 
 .header__logo {
-    
-
+    margin-bottom: 4px;
 }
 
 .header__logo-image {
     width: 148px;
-    height: 105px;
-
-    
+    height: 105px;  
 }
 
 .address {
+    text-decoration: none;
+    border-bottom: 1px solid black;
+}
+
+.header__address {
     display: flex;
     width: 240px;
     height: 24px;
     flex-direction: column;
-}
-
-.header__address {
+    margin-bottom: 7px;
+    margin-top: 5px;
     color: #000;
     font-size: 18px;
     font-family: Raleway;
     font-style: normal;
     font-weight: 400;
-    
+    line-height: 24.3px;
 }
