--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    font-family: Raleway;
     margin-top: 92px;
+    margin-right: 49px;
     margin-bottom: 92px;
     margin-left: 51px;
-    margin-right: 49px;  
+    font-family: Raleway;  
 }
 
 .header__menu {
@@ -20,13 +20,14 @@
     justify-content: space-evenly;
     gap: 32px;
     margin-top: 43px;
-    margin-bottom: 45px; 
+    margin-bottom: 45px;
+    list-style: circle; 
 }
 
 .header__links-list-item {
     font-family: Raleway;
-    font-style: normal;
     font-weight: 400;
+    font-style: normal;
     line-height: normal;
 }
 
@@ -44,26 +45,75 @@
 }
 
 .address {
-    text-decoration: none;
     border-bottom: 1px solid black;
+    text-decoration: none;
 }
 
 .header__address {
     display: flex;
+    flex-direction: column;
     width: 240px;
     height: 24px;
-    flex-direction: column;
-    margin-bottom: 7px;
     margin-top: 5px;
+    margin-bottom: 7px;
     color: #000;
-    font-size: 18px;
     font-family: Raleway;
-    font-style: normal;
     font-weight: 400;
+    font-size: 18px;
+    font-style: normal;
     line-height: 24.3px;
 }
 
-.image_lotus {
+.overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    display: none;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6); 
+}
+
+.cover {
+    background-image: url("../images/cover.jpg");
+    background-repeat: no-repeat;
     width: 1440px;
     height: 757px;
+   
+}
+
+.cover__title {
+    color: #FFF;
+    font-size: 100px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115%;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+   
+}
+
+.aligned-text {
+
+}
+
+.aligned-text_center {
+
+}
+
+.aligned-text_right {
+
+}
+
+.letter-spacing-extended {
+
+}
+
+.no-letter-spacing {
+    
 }
