--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 150px 1fr;
     margin-top: 92px;
     margin-right: 49px;
     margin-bottom: 92px;
@@ -10,6 +9,7 @@
 }
 
 .header__menu {
+    justify-self: start;
     color: #000;
     font-size: 18px;
 }
@@ -52,6 +52,7 @@
 .header__address {
     display: flex;
     flex-direction: column;
+    justify-self: end;
     width: 240px;
     height: 24px;
     margin-top: 5px;
@@ -67,53 +68,105 @@
 .overlay{
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
-    z-index: -1;
-    display: none;
     inset: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.6); 
 }
 
 .cover {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 757px;
+    margin-bottom: 181px;
+    padding: 165px 50px 235px 50px;
     background-image: url("../images/cover.jpg");
     background-repeat: no-repeat;
-    width: 1440px;
-    height: 757px;
-   
+    background-position: center;
+    background-size: 100%; 
 }
 
-.cover__title {
-    color: #FFF;
-    font-size: 100px;
+.cover__title {  
+    position: relative;
+    z-index: 3;
+    color: #fff;
     font-family: Raleway;
-    font-style: normal;
     font-weight: 700;
+    font-size: 100px;
+    font-style: normal;
     line-height: 115%;
     letter-spacing: 30px;
-    text-transform: uppercase;
-   
+    text-transform: uppercase; 
 }
 
 .aligned-text {
-
+    display: block;
 }
 
 .aligned-text_center {
-
+    margin-top: 10px;
+    text-align: center;    
 }
 
 .aligned-text_right {
-
+    margin-top: 10px;
+    text-align: right;
 }
 
 .letter-spacing-extended {
-
+    letter-spacing: 0.5em;
 }
 
 .no-letter-spacing {
-    
+    letter-spacing: initial;
+}
+
+.cover__description {
+    position: relative;
+    z-index: 3;
+    display: grid;
+    grid-template-columns: 260px 1fr 260px;
+    margin-top: 135px;
+    margin-bottom: 50px;
+    color: #fff;
+    font-family: Raleway;
+    font-weight: 400;
+    font-size: 22px;
+    font-style: normal;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.cover__description-text {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    align-self: center;
+    word-spacing: 1em;
+}
+
+.bet-button {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    justify-self: end;
+    width: 257px;
+    height: 52px;
+    border: 1px solid #fff;
+    padding: 12px 32px;
+    color: #fff;
+    font-family: Raleway;
+    font-weight: 400;
+    font-size: 22px;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase; 
+    background: transparent;
+    background-color: transparent;
+    background-image: none;
+  
 }
