--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@
 }
 
 .overlay{
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     inset: 0;
@@ -156,7 +156,7 @@
     grid-column-start: 3;
     grid-column-end: 4;
     justify-self: end;
-    width: 257px;
+    max-width: 257px;
     height: 52px;
     border: 1px solid #fff;
     padding: 12px 32px;
@@ -167,103 +167,106 @@
     font-style: normal;
     line-height: normal;
     text-transform: uppercase; 
-    background: transparent;
     background-color: transparent;
     background-image: none;
 }
 
 .lots {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 100px;
-    gap: 30px;
+  display: grid;
+  grid-template-rows: 74px 74px 74px;
 }
 
 .lots__heading {
+    margin-bottom: 27px;
+    margin-left: 90px;
     color: #000;
     font-family: Raleway;
+    font-weight: 700;
     font-size: 40px;
     font-style: normal;
-    font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    margin-left: 40px;
-    margin-bottom: 27px;
-
 }
 
 .lots__card-list {
-
+    display: grid;
+    grid-template-columns: 430px 430px 430px;
+    justify-content: space-around;
+    margin-right: 50px;
+    margin-left: 50px;   
 }
 
 .lots__card-list-item {
-
+    list-style: none;
 }
 
 .card-link {
-
+    display: block;
 }
 
 .card {
-   
-   
+    width: 430px;
+    height: 450px;  
+    padding-top: 50px;
+    padding-right: 40px;
+    padding-bottom: 50px;
+    padding-left: 40px; 
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 .card_type_film {
-    background-image: url(../images/card-lot-01.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    width: 430px;
-    height: 450px; 
-  
+    position: relative;
+    z-index: 2;
+    display: grid;
+    align-content: space-between;
+    background-image: url(../images/card-lot-01.jpg); 
 }
 
 .card_type_book { 
-    align-self: center;
-    background-image: url(../images/card-lot-02.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    width: 430px;
-    height: 450px; 
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    background-image: url(../images/card-lot-02.jpg);   
 }
 
 .card_type_picture {
-    background-image: url(../images/card-lot-03.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    width: 430px;
-    height: 450px; 
+    position: relative;
+    z-index: 2;
+    display: grid;
+    align-content: stretch;
+    background-image: url(../images/card-lot-03.jpg);  
 }
 
 .card__title {
+    position: relative;
+    z-index: 3;
+    justify-self: start;
     color: #fff;
     font-family: Raleway;
+    font-weight: 700;
     font-size: 22px;
     font-style: normal;
-    font-weight: 700;
     line-height: 120%;
     text-decoration-line: underline;
     text-transform: uppercase;
-    position: relative;
-    z-index: 3;
 }
 
 .card__text {
-    color: #fff;
-    font-family: Raleway;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    width: 350px;
-    height: 96px;
     position: relative;
     z-index: 3;
+    width: 350px;
+    height: 96px;
+    color: #fff;
+    font-family: Raleway;
+    font-weight: 400;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 120%;
 }
 
 .lots__look-more-link {
-
+    
 }
