--- a/styles/global.css
+++ b/styles/global.css
@@ -2,12 +2,12 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: Raleway, Helvetica, Arial, sans-serif;
 }
 
 body {
   min-width: 1100px;
   margin: 0;
-  font-family: Raleway, sans-serif;
 }
 
 h1,
