--- a/styles/style.css
+++ b/styles/style.css
@@ -57,8 +57,8 @@
     margin-top: 5px;
     margin-bottom: 7px;
     color: #000;
-    font-style: normal;
     font-weight: 400;
+    font-style: normal;
     line-height: 24.3px;
 }
 
@@ -76,8 +76,8 @@
     position: relative;
     z-index: 2;
     display: flex;
-    height: 757px;
     flex-direction: column;
+    height: 757px;
     margin-bottom: 181px;
     padding: 165px 50px 235px 50px;
     background-image: url("../images/cover.jpg");
@@ -161,14 +161,14 @@
 }
 
 .lots {
-    margin-bottom: 55px;
     margin-right: 50px;
+    margin-bottom: 55px;
     margin-left: 50px;
 }
 
 .lots__heading {
-    margin-left: 90px;
     margin-top: 27px;
+    margin-left: 90px;
     color: #000;
     font-weight: 700;
     font-size: 40px;
@@ -193,15 +193,15 @@
 
 .card {
     width: 430px;
-    height: 450px;  
+    height: 450px;
+    margin-top: 27px;
+    margin-bottom: 30px;  
     padding-top: 50px;
     padding-right: 40px;
     padding-bottom: 50px;
     padding-left: 40px; 
     background-repeat: no-repeat;
     background-size: 100%;
-    margin-bottom: 30px;
-    margin-top: 27px;
 }
 
 .card_type_film {
@@ -253,6 +253,56 @@
 
 .lots__look-more-link {
    margin-left: 90px;
- 
+}
 
+.about {
+    display: grid;
+    grid-template-columns: 430px 1fr;
+    grid-template-rows: auto auto auto;
+    margin-top: 182px;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+.about__column {
+    padding-right: 95px;
+    padding-left: 95px;
+}
+
+.about__logo {   
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    align-self: center;
+    width: 240px;
+    height: 240px;
+    border-radius: 150px;
+    background-color: #000;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px; 
+}
+
+.about__title {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 100px;
+    font-weight: 700;
+    font-size: 40px;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase; 
+}
+
+.about__text {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    min-width: 885px;
+    margin-bottom: 180px;
+    font-weight: 400;
+    font-size: 20px;
+    font-style: normal;
+    line-height: normal;
 }
