--- a/styles/style.css
+++ b/styles/style.css
@@ -20,22 +20,24 @@
     gap: 32px;
     margin-top: 43px;
     margin-bottom: 45px;
-    list-style: circle; 
 }
 
-/*.header__links-list-item {
+a:hover {
+    text-decoration: none; 
+} 
+/* решила сделать чуть инетернеснее)))  */
+
+.header__links-list-item {
     font-weight: 400;
     font-style: normal;
     line-height: normal;
-}*/
+    list-style: circle; 
+    margin-top: 4px;
+}
 
 .header__link_active {
     list-style: none;
 }
-
-/*.header__logo {
- 
-}*/
 
 .header__logo-image {
     width: 148px;
@@ -305,4 +307,39 @@
     font-size: 20px;
     font-style: normal;
     line-height: normal;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.footer__menu {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+}
+   
+.footer__menu-list {
+    list-style: none;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.footer__menu-link_active {
+ text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+    gap: 50px;
+}
+
+.footer__social-icon {
+    max-width: 240px;
+    height: 48px;
 }
