--- a/styles/style.css
+++ b/styles/style.css
@@ -29,11 +29,11 @@ a:hover {
 /* решила сделать чуть инетернеснее)))  */
 
 .header__links-list-item {
+  margin-top: 4px;
   font-weight: 400;
   font-style: normal;
   line-height: normal;
   list-style: circle;
-  margin-top: 4px;
 }
 
 .header__link_active {
@@ -68,7 +68,7 @@ a:hover {
 .overlay {
   position: absolute;
   inset: 0;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -79,12 +79,10 @@ a:hover {
   z-index: 2;
   display: flex;
   flex-direction: column;
-  height: 757px;
   margin-bottom: 181px;
   padding: 165px 50px 50px 50px;
   background-image: url("../images/cover.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
+  background-repeat: round;
   background-size: 100%;
 }
 
@@ -127,7 +125,6 @@ a:hover {
   display: grid;
   grid-template-columns: 260px 1fr 260px;
   margin-top: 135px;
-  margin-bottom: 50px;
   color: #fff;
   font-weight: 400;
   font-size: 22px;
@@ -310,22 +307,22 @@ a:hover {
 .footer {
   display: flex;
   justify-content: space-between;
-  margin-left: 50px;
   margin-right: 50px;
+  margin-left: 50px;
 }
 
 .footer__menu {
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
   text-align: center;
 }
 
 .footer__menu-list {
-  list-style: none;
   grid-column-start: 2;
   grid-column-end: 3;
+  list-style: none;
 }
 
 .footer__menu-link_active {
