--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,7 @@ a:hover {
 
 .header__address {
   justify-self: end;
+  font-size: 18px;
   align-self: center;
   font-style: normal;
   line-height: 24.3px;
@@ -64,8 +65,9 @@ a:hover {
   margin-bottom: 181px;
   padding: 165px 50px 50px 50px;
   background-image: url("../images/cover.jpg");
-  background-repeat: round;
-  background-size: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .cover__title {
@@ -140,14 +142,14 @@ a:hover {
 }
 
 .lots__heading {
-  margin-left: 90px;
+  margin-left: 40px;
   font-size: 40px;
   text-transform: uppercase;
 }
 
 .lots__card-list {
   display: grid;
-  grid-template-columns: 430px 430px 430px;
+  grid-template-columns: repeat(3, 430px);
   justify-content: space-between;
 }
 
@@ -157,7 +159,7 @@ a:hover {
 
 .card {
   width: 430px;
-  height: 450px;
+  min-height: 450px;
   margin-top: 27px;
   margin-bottom: 30px;
   padding-top: 50px;
@@ -211,26 +213,27 @@ a:hover {
 }
 
 .lots__look-more-link {
-  margin-left: 90px;
+  margin-left: 40px;
 }
 
 .about {
+  margin-top: 180px;
   display: grid;
   grid-template-columns: 430px 1fr;
   grid-template-rows: auto auto auto;
-  margin-top: 182px;
-  margin-right: 50px;
-  margin-left: 50px;
+  column-gap: 24px;
+  padding: 0 50px;
 }
 
 .about__column {
-  padding-left: 95px;
+  justify-self: center;
 }
 
 .about__logo {
   display: flex;
   justify-content: center;
-  align-items: center;
+  justify-self: center;
+  align-self: center;
   width: 240px;
   height: 240px;
   border-radius: 150px;
@@ -239,16 +242,19 @@ a:hover {
 
 .about__logo-image {
   width: 148px;
-  height: 114px;
 }
 
 .about__title {
+  padding: 100px 0 104px;
   align-self: center;
   font-size: 40px;
   text-transform: uppercase;
 }
 
 .about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
   grid-column-start: 2;
   grid-column-end: 3;
   margin-bottom: 180px;
@@ -286,7 +292,8 @@ a:hover {
 
 .footer__social-list {
   display: flex;
-  gap: 50px;
+  gap: 48px;
+  list-style: none;
 }
 
 .footer__social-icon {
